# funnels_cpp

./: .gitmodules  CMakeLists.txt  main.cpp  main2.cc
include/funnels/: distances.hh  dynamics.hh  funnel_computations.hh  funnels.hh  lyapunov.hh  transitions.hh  utils.hh
src/: CMakeLists.txt  funnels.cc  lyapunov.cc  transitions.cc  utils.cc
